--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,3 +17,5 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_QYEM_SIGNATURE }}
           channelId: live
           projectId: qyem-signature
+           # أضيفي هذا السطر:
+          entryPoint: .
